--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "react-icons": "^5.3.0"
   }
 }
