--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "axios": "^1.7.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "ra-data-json-server": "^5.2.1",
     "react": "^18.3.1",
+    "react-admin": "^5.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
