feat(frontend/backend): using toast on front and changing text on back

--- a/backend/.ENV
+++ b/backend/.ENV
@@ -1,2 +1,2 @@
-EMAIL_USER= andersonvittor2010@gmail.com
-EMAIL_PASS= January18Th*
+EMAIL_USER = 'andersonvittor1801@gmail.com'
+EMAIL_PASS = 'zknx vqar qtef qyvj'
